# stock-ml-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  GETTING_STARTED.md  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  stock_ml_pipeline_plan.md
.specify/memory/: constitution.md
configs/: data_config.yaml  model_config.yaml  tickers.yaml
dashboard/: Dockerfile  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/src/app/models/: page.tsx
dashboard/src/app/pipeline/: page.tsx
dashboard/src/app/sentiment/: page.tsx
dashboard/src/components/: CandlestickChart.tsx
dashboard/src/lib/: api.ts  utils.ts
models/: lgbm_1d_results.json  lgbm_20d_results.json  lgbm_5d_results.json  xgboost_1d_results.json  xgboost_20d_results.json  xgboost_5d_results.json
scripts/: backfill_history.sh  bootstrap_db.sh  bootstrap_db.sql  daily_update.sh  setup.sh  smart_pipeline.sh
src/collectors/: events_collector.py  fundamentals_collector.py  gdelt_collector.py  historical_news_collector.py  macro_collector.py  news_collector.py  price_collector.py  tradingview_collector.py
src/features/: calendar.py  cross_sectional.py  macro.py  normalizer.py  pipeline.py  sentiment.py  sentiment_features.py  sentiment_llm.py  targets.py  technical.py
src/inference/: api.py  logger.py  predictor.py
src/models/: baseline.py  ensemble.py  foundation.py  regime.py  tft.py
src/training/: drift.py  evaluate.py  registry.py  retrain.py  tft_data.py  train.py  train_foundation.py  train_tft.py  walk_forward.py
src/utils/: config.py  db.py  logger.py
